# Audio-Processing-API

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 013ce5e0e6cc_initial.py
app/: main.py
app/api/routes/: admin.py  audio.py  auth.py
app/models/: __init__.py  audio.py  user.py
app/schemas/: audio.py  user.py
app/services/: audio.py  storage.py  user.py
app/setup/: config.py  database.py  security.py
app/tasks/: celery_app.py  processing.py
tests/: conftest.py
tests/integration/: test_audio.py  test_auth.py
tests/unit/: test_processing.py
